# agents

./: .env.example  .gitignore  BATCH_MODE_OPTIMIZATION_PROPOSAL.md  CHANGES_SUMMARY.md  DEVELOPMENT_LOG.md  FAIL_FAST_MODE.md  GOOGLE_SHEETS_GUIDE.md  IMPLEMENTATION_STATUS.md  IMPROVEMENT_PLAN.md  MIGRATION_OPENROUTER.md  OPENROUTER_CHANGES.md  PARALLEL_BATCH_MODE.md  PHASE_2_RELIABILITY.md  QUICK_START.md  README.md  REFACTORING.md  SCRAPERS_GUIDE.md  TAVILY_CHANGES.md  TAVILY_INTEGRATION.md  __init__.py  batch_process_brands.py  graph.py  main.py  pyproject.toml  requirements.txt  run_batch.bat  run_batch.py  run_code_review.py  test_api.py  test_brands.py
agents/: __init__.py  base_agent.py  categorization_agent.py  code_review_agent.py  customer_intelligence_agent.py  data_collection_agent.py  formatter_agent.py  insights_agent.py  product_catalog_agent.py  relationship_agent.py
config/: __init__.py  persian_templates.py  prompts.py  settings.py
data/: artin_pouya_pardaz_group.json  cinnagen_complete_catalog.json  golrang_brands_database.json  henkel_group_iran.json  iran_novin_group.json  iranian_brands_knowledge.json  snapp_group_complete.json  zar_group_complete.json
logs/: README.md  run_20250216_143025.example.jsonl
models/: __init__.py  output_models.py  state.py
output/.claude/: settings.local.json
output/aban_tether/: 8_customer_intelligence_report.md
output/active_cleaners/: 0_complete_master_report.txt  1_brand_profile.json  20260215_034617.csv  20260215_034617.json  20260215_035105.csv  (+11 more)
scrapers/: __init__.py  base_scraper.py  codal_scraper.py  example_scraper.py  linka_scraper.py  rasmio_scraper.py  tavily_scraper.py  trademark_scraper.py  tsetmc_scraper.py  web_search.py
state/: checkpoint_20260217_082341.json  checkpoint_latest.json  registry.example.json  registry.json
tests/: README.md  conftest.py  test_agents.py  test_code_review.py  test_output_models.py  test_scrapers.py  test_utils.py
utils/: __init__.py  batch_processor.py  cost_tracker.py  exceptions.py  google_sheets_client.py  helpers.py  llm_client.py  logger.py  rate_limiter.py  registry.py  run_logger.py
(+293 files in other folders)
